reduce cyclomatic complexity

--- a/namespaces/efortmeyer-polar-core-attributes-config.html
+++ b/namespaces/efortmeyer-polar-core-attributes-config.html
@@ -107,6 +107,9 @@
 </h3>
 
 <dl class="phpdocumentor-table-of-contents">
+            <dt class="phpdocumentor-table-of-contents__entry -interface"><a href="classes/Efortmeyer-Polar-Core-Attributes-Config-AttributeConfigInterface.html"><abbr title="\Efortmeyer\Polar\Core\Attributes\Config\AttributeConfigInterface">AttributeConfigInterface</abbr></a></dt>
+        <dd>Provides a way to retrieve
+metadata for an attribute.</dd>
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Core-Attributes-Config-ConstructorArgs.html"><abbr title="\Efortmeyer\Polar\Core\Attributes\Config\ConstructorArgs">ConstructorArgs</abbr></a></dt>
         <dd>Use to provide metadata about the attribute
