--- a/packages/Polar.html
+++ b/packages/Polar.html
@@ -107,9 +107,6 @@
         <dd>Provides support for configuring the app.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -interface"><a href="classes/Efortmeyer-Polar-Api-Attributes-AttributeInterface.html"><abbr title="\Efortmeyer\Polar\Api\Attributes\AttributeInterface">AttributeInterface</abbr></a></dt>
         <dd>Provides a way to configure objects using Attributes.</dd>
-            <dt class="phpdocumentor-table-of-contents__entry -interface"><a href="classes/Efortmeyer-Polar-Api-Attributes-Config-AttributeConfigInterface.html"><abbr title="\Efortmeyer\Polar\Api\Attributes\Config\AttributeConfigInterface">AttributeConfigInterface</abbr></a></dt>
-        <dd>Provides a way to retrieve
-metadata for an attribute.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -interface"><a href="classes/Efortmeyer-Polar-Api-Comparable.html"><abbr title="\Efortmeyer\Polar\Api\Comparable">Comparable</abbr></a></dt>
         <dd>Provides support for equality comparison.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -interface"><a href="classes/Efortmeyer-Polar-Api-DataStorage-CollectionStorageInterface.html"><abbr title="\Efortmeyer\Polar\Api\DataStorage\CollectionStorageInterface">CollectionStorageInterface</abbr></a></dt>
@@ -118,6 +115,9 @@ metadata for an attribute.</dd>
         <dd>Provides a way to validate a field.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -interface"><a href="classes/Stringable.html"><abbr title="\Stringable">Stringable</abbr></a></dt>
         <dd></dd>
+            <dt class="phpdocumentor-table-of-contents__entry -interface"><a href="classes/Efortmeyer-Polar-Core-Attributes-Config-AttributeConfigInterface.html"><abbr title="\Efortmeyer\Polar\Core\Attributes\Config\AttributeConfigInterface">AttributeConfigInterface</abbr></a></dt>
+        <dd>Provides a way to retrieve
+metadata for an attribute.</dd>
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Api-App.html"><abbr title="\Efortmeyer\Polar\Api\App">App</abbr></a></dt>
         <dd>Integrates the libraries features
