--- a/indices/files.html
+++ b/indices/files.html
@@ -116,7 +116,7 @@
                     <li><a href="files/api-datastorage-collectionstorageinterface.html"><abbr title="Api/DataStorage/CollectionStorageInterface.php">CollectionStorageInterface.php</abbr></a></li>
                     <li><a href="files/stock-attributes-column.html"><abbr title="Stock/Attributes/Column.php">Column.php</abbr></a></li>
                     <li><a href="files/stock-attributes-config-columnkey.html"><abbr title="Stock/Attributes/Config/ColumnKey.php">ColumnKey.php</abbr></a></li>
-                    <li><a href="files/api-comparable.html"><abbr title="Api/Comparable.php">Comparable.php</abbr></a></li>
+                    <li><a href="files/core-comparable.html"><abbr title="Core/Comparable.php">Comparable.php</abbr></a></li>
                     <li><a href="files/core-parsers-annotation-constructor.html"><abbr title="Core/Parsers/Annotation/Constructor.php">Constructor.php</abbr></a></li>
                     <li><a href="files/core-attributes-config-constructorargs.html"><abbr title="Core/Attributes/Config/ConstructorArgs.php">ConstructorArgs.php</abbr></a></li>
                     <li><a href="files/core-attributes-config-constructorargsnone.html"><abbr title="Core/Attributes/Config/ConstructorArgsNone.php">ConstructorArgsNone.php</abbr></a></li>
@@ -154,7 +154,7 @@
                     <li><a href="files/core-fields-fieldmetadataconfig.html"><abbr title="Core/Fields/FieldMetadataConfig.php">FieldMetadataConfig.php</abbr></a></li>
                     <li><a href="files/core-fields-fieldmetadatafactory.html"><abbr title="Core/Fields/FieldMetadataFactory.php">FieldMetadataFactory.php</abbr></a></li>
                     <li><a href="files/api-rendering-files-file.html"><abbr title="Api/Rendering/Files/File.php">File.php</abbr></a></li>
-                    <li><a href="files/api-uielements-form.html"><abbr title="Api/UIElements/Form.php">Form.php</abbr></a></li>
+                    <li><a href="files/api-form.html"><abbr title="Api/Form.php">Form.php</abbr></a></li>
                     <li><a href="files/api-uielements-formcontrol.html"><abbr title="Api/UIElements/FormControl.php">FormControl.php</abbr></a></li>
                 </ul>
                                                         <h3>H</h3>
@@ -166,7 +166,7 @@
                                     <h3>I</h3>
         <ul class="phpdocumentor-list">
                     <li><a href="files/api-rendering-files-icofile.html"><abbr title="Api/Rendering/Files/IcoFile.php">IcoFile.php</abbr></a></li>
-                    <li><a href="files/api-inmemoryappconfig.html"><abbr title="Api/InMemoryAppConfig.php">InMemoryAppConfig.php</abbr></a></li>
+                    <li><a href="files/stock-appconfig-inmemoryappconfig.html"><abbr title="Stock/AppConfig/InMemoryAppConfig.php">InMemoryAppConfig.php</abbr></a></li>
                     <li><a href="files/stock-attributes-input.html"><abbr title="Stock/Attributes/Input.php">Input.php</abbr></a></li>
                     <li><a href="files/stock-attributes-config-inputkey.html"><abbr title="Stock/Attributes/Config/InputKey.php">InputKey.php</abbr></a></li>
                     <li><a href="files/core-attributes-inputtypes.html"><abbr title="Core/Attributes/InputTypes.php">InputTypes.php</abbr></a></li>
@@ -182,11 +182,11 @@
                 </ul>
                                     <h3>M</h3>
         <ul class="phpdocumentor-list">
-                    <li><a href="files/stock-validation-maxlength.html"><abbr title="Stock/Validation/MaxLength.php">MaxLength.php</abbr></a></li>
                     <li><a href="files/stock-attributes-maxlength.html"><abbr title="Stock/Attributes/MaxLength.php">MaxLength.php</abbr></a></li>
+                    <li><a href="files/stock-validation-maxlength.html"><abbr title="Stock/Validation/MaxLength.php">MaxLength.php</abbr></a></li>
                     <li><a href="files/stock-attributes-config-maxlengthkey.html"><abbr title="Stock/Attributes/Config/MaxLengthKey.php">MaxLengthKey.php</abbr></a></li>
-                    <li><a href="files/api-uielements-messages.html"><abbr title="Api/UIElements/Messages.php">Messages.php</abbr></a></li>
                     <li><a href="files/stock-attributes-messages.html"><abbr title="Stock/Attributes/Messages.php">Messages.php</abbr></a></li>
+                    <li><a href="files/api-uielements-messages.html"><abbr title="Api/UIElements/Messages.php">Messages.php</abbr></a></li>
                     <li><a href="files/api-model.html"><abbr title="Api/Model.php">Model.php</abbr></a></li>
                 </ul>
                                     <h3>N</h3>
@@ -221,8 +221,8 @@
                     <li><a href="files/api-uielements-textformcontrol.html"><abbr title="Api/UIElements/TextFormControl.php">TextFormControl.php</abbr></a></li>
                     <li><a href="files/core-parsers-annotation-token.html"><abbr title="Core/Parsers/Annotation/Token.php">Token.php</abbr></a></li>
                     <li><a href="files/core-parsers-annotation-typetag.html"><abbr title="Core/Parsers/Annotation/TypeTag.php">TypeTag.php</abbr></a></li>
-                    <li><a href="files/stock-validation-typevalidation.html"><abbr title="Stock/Validation/TypeValidation.php">TypeValidation.php</abbr></a></li>
                     <li><a href="files/stock-attributes-typevalidation.html"><abbr title="Stock/Attributes/TypeValidation.php">TypeValidation.php</abbr></a></li>
+                    <li><a href="files/stock-validation-typevalidation.html"><abbr title="Stock/Validation/TypeValidation.php">TypeValidation.php</abbr></a></li>
                     <li><a href="files/stock-attributes-config-typevalidationkey.html"><abbr title="Stock/Attributes/Config/TypeValidationKey.php">TypeValidationKey.php</abbr></a></li>
                 </ul>
                                                         <h3>V</h3>
