--- a/namespaces/efortmeyer-polar-core.html
+++ b/namespaces/efortmeyer-polar-core.html
@@ -116,6 +116,8 @@
 </h3>
 
 <dl class="phpdocumentor-table-of-contents">
+            <dt class="phpdocumentor-table-of-contents__entry -interface"><a href="classes/Efortmeyer-Polar-Core-Comparable.html"><abbr title="\Efortmeyer\Polar\Core\Comparable">Comparable</abbr></a></dt>
+        <dd>Provides support for equality comparison.</dd>
     
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Core-Entry.html"><abbr title="\Efortmeyer\Polar\Core\Entry">Entry</abbr></a></dt>
         <dd>Represents an item in a collection or a row in a table.</dd>
